2006-12-07  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Banshee.Base/Banshee.SmartPlaylist/SmartPlaylistSource.cs: Prevent a
	crasher by wrapping an access into the Library's dictionary of tracks in a
	try/catch.

2006-12-07  Aaron Bockover  <abock@gnome.org>

	* data/UIManagerLayout.xml: 
	* src/Banshee.Base/ActionManager.cs: Move the source properties action
	to the edit menu

	* src/Banshee.Base/SourceManager.cs: Set the source properties action's
	visibility and not sensitivity

	* src/Banshee.Base/Database.cs: Added new columns to the Playlists table

	* src/Banshee.Base/Source.cs: Make SortColumn and SortType virtual

	* src/Banshee.Base/Sources/PlaylistSource.cs: Override SortColumn and
	SortType properties to read/write the Playlists table for the playlist

	* src/Banshee.Base/Sources/LibrarySource.cs: Override SortColumn and
	SortType properties to read/write from/to GConf

	* src/Banshee.Base/Gui/SourceView.cs: Fixed right click source activation
	bug. Source should never change on a right click - only the highlight

	* data/banshee.schemas.in:
	* src/Banshee.Base/GConfKeys.cs: Added LibrarySortColumn, LibrarySortType

2006-12-07  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/Banshee.AudioProfiles/Pipeline.cs:
	* src/Banshee.Base/Banshee.AudioProfiles/PipelineVariable.cs:
	* src/Banshee.Base/Banshee.AudioProfiles/ProfileManager.cs: Fixed locale
	issues with loading of some profiles (vorbis) due to culture format
	rules that are not compatible with GStreamer (all pipeline input should
	be en_US); all conversions use an en-US CultureInfo now

2006-12-07  Aaron Bockover  <abock@gnome.org>

	* data/audio-profiles/aac.xml: Fixed faac bitrate range problem

2006-12-07  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Widgets/SearchEntry.cs: Set the base style on the action
	icons in the search entry when the style has been fully set on the
	entry (BGO #321773)

2006-12-07  Aaron Bockover  <abock@gnome.org>
