@@ -1,3 +1,11 @@
+2006-12-08  Aaron Bockover  <aaron@abock.org>
+
+	* src/PlayerInterface.cs: Fixed default accelerator for remove track
+	confirmation dialog
+
+	* src/Banshee.Widgets/SeekSlider.cs: Set the slider insensitive if no
+	playback is happening (idle)
+
 2006-12-07  Gabriel Burt  <gabriel.burt@gmail.com>
 
 	* src/Banshee.Base/Banshee.SmartPlaylist/SmartPlaylistSource.cs: Prevent a
